[package]
name = "dbt-xdbc"
description = "Wrapper to ADBC (Arrow Database Connectivity) and ODBC drivers"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
default = []
odbc = ["odbc-sys"]
xdbc-fuzzying = []

[dependencies]
adbc-core = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
getrandom = "0.2.15"
http = { workspace = true }
ini = { workspace = true }
libloading = { version = "0.8" }
odbc-sys = { version = "0.25.0", optional = true }
parking_lot = { workspace = true }
percent-encoding = "2.3.1"
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
siphasher = { version = "1.0.1" }
tokio = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
zstd-safe = { workspace = true }

[dev-dependencies]
test-with = { version = "0.14.7", default-features = false }
