[package]
name = "dbt-xdbc"
description = "Wrapper to ADBC (Arrow Database Connectivity) and ODBC drivers"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
default = []
odbc = ["odbc-sys"]
xdbc-fuzzying = []
repl = ["dialoguer", "clap", "dbt-common"]

[dependencies]
adbc-core = { workspace = true }
adbc-driver-manager = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
atomic-wait = { version = "1.1.0" }
base64 = { workspace = true }
chrono = { workspace = true }
dbt-cancel = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dirs = { workspace = true }
futures = { workspace = true }
getrandom = "0.2.15"
http = { workspace = true }
ini = { workspace = true }
libloading = { version = "0.8" }
odbc-sys = { version = "0.25.0", optional = true }
parking_lot = { workspace = true }
percent-encoding = "2.3.1"
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
siphasher = { workspace = true }
tokio = { workspace = true }
tracy-client = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
zstd-safe = { workspace = true }

[dev-dependencies]
test-with = { version = "0.14.7", default-features = false }

[[bin]]
name = "dbt-xdbc-repl"
path = "src/bin/repl.rs"
required-features = ["repl"]

[dependencies.dbt-common]
optional = true
path = "../dbt-common"

[dependencies.dialoguer]
features = ["history"]
optional = true
version = "0.11.0"

[dependencies.clap]
features = ["derive"]
optional = true
version = "4.4"
