[package]
name = "minijinja-typecheck-builtins"
description = "A library of minijinja typecheck builtins"
edition = "2024"

[lints]
workspace = true

[lib]
name = "minijinja_typecheck_builtins"
path = "src/lib.rs"

[dependencies]
dbt-serde_yaml = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
