[package]
name = "proto-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
prost-reflect = "0.14"

[lib]
name = "proto_rust"
path = "src/lib.rs"
